--- a/index.html
+++ b/index.html
@@ -5,62 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Books, store, buy, купить, книга, книги, магазин">
     <title>Книжник</title>
-    <link rel="stylesheet" href="outline.css">
+    <link rel="stylesheet" href="CSS/main.css">
 </head>
-<body>
-    <main><h1>Книжник - книги здесь</h1></main>
+<body class="bodypage-main">
     <header>
-        <h2>Навигация по сайту</h2>
-        <nav>Каталог, Лучшее, Контакты</nav>
+        <div class="panel">
+        <div class="panel__logo">
+            <img src="res/logo.png" alt="Logo" class="panel__logo__image">
+        </div>
+            
+        <div class="panel__center">
+        <div class="panel__search_field"><h2>Здесь будет строка поиска</h2> </div>
+        <div class="panel__navigation">
+        <nav>
+        <ul class="panel__navigation__list">
+            <li><span class="panel__navigation__list__item">Каталог</span></li> 
+            <li><span class="panel__navigation__list__item">Лучшее</span></li> 
+            <li><span class="panel__navigation__list__item">Контакты</span></li>
+        </ul></nav>
+        </div>
+        </div>
+        </div>
+        <div class="description">
         <article>
             <h2>О нас</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, a? Nihil voluptas ex in architecto ad! Quod nam neque explicabo molestiae sit pariatur, ex unde temporibus, quam, hic asperiores incidunt.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam hic, aliquam cumque praesentium nisi temporibus sunt officiis at, asperiores consectetur accusamus sit inventore corrupti sequi dolores tempore molestiae a! Voluptas?</p>
         </article>
-        <section>
+        </div>
+        <div class="bestbooks">
             <h2>Фентези подборка</h2>
-            <ul>
-                <li>Ведьмак</li>
-                <li>Колесо времени</li>
-                <li>Властелин колец</li>
+            <ul class="bestbooks__list">
+                <li><img src="res/img1.png" class="bestbooks__image"></li>
+                <li><img src="res/img2.png" class="bestbooks__image"></li>
+                <li><img src="res/img3.png" class="bestbooks__image"></li>
             </ul>
-        </section>
-        <section>
+        </div>
+        <div class="achievements">
             <h2>Топ наших достижений</h2>
             <ol>
                 <li><em>Низкие</em> цены</li>
                 <li><del>Большой</del> Гигантский ассортимент</li>
                 <li><strong>Отличное</strong> оформление сайта</li>
             </ol>
-        </section>
         <aside>Текст выше был сгенерирован</aside>
-        <h2>
-            Символ нашего сайта
-        </h2>
-        <pre>
-            __...--~~~~~-._   _.-~~~~~--...__
-            //               `V'               \\ 
-           //                 |                 \\ 
-          //__...--~~~~~~-._  |  _.-~~~~~~--...__\\ 
-         //__.....----~~~~._\ | /_.~~~~----.....__\\
-        ====================\\|//====================
-                            `---`
-        </pre>
-        <h2>
-            Внезапный сниппет
-        </h2>
-        <pre><code>
-            num = int(input())
-            fact = 1
-            for i in range(1, num+1):
-                fact = fact * i
-            print (fact)
-        </code></pre>
-
-        <p>Как говорит эксперт по книгам <cite>Иван Иванов</cite>, <q>книги нельзя покупать где-либо ещё, кроме "Книжника"</q></p>
-        <p>Формула нашего успеха проста: цена<sub>1</sub> + цена<sub>2</sub> - скидка<sup>2</sup></p>
-        <p><del>ПОКУПАЙ КНИГИ</del><ins>ЗАКУПАЙ КНИГИ</ins></p>
+    </div>
     </header>
+    <div class="rights">
     <footer>Книжник - All rights reserved</footer>
+    </div>
 </body>
 </html>
