--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         </div>
             
         <div class="panel__center">
-        <div class="panel__search_field"><h2>Здесь будет строка поиска</h2> </div>
+        <div class="panel__search">
+            <form class="panel__search__bar">
+                <input class="panel__search__bar__input" type="text" placeholder="Найди книгу для себя">
+                <button class="panel__search__button" type="submit"><img class="panel__search__button__img" src="res/search.png"></button>
+            </form> </div>
         <div class="panel__navigation">
         <nav>
         <ul class="panel__navigation__list">
@@ -24,6 +28,9 @@
             <li><span class="panel__navigation__list__item">Контакты</span></li>
         </ul></nav>
         </div>
+        </div>
+        <div class="panel__right">
+            <ul class="panel__right__buttons"><li><a href="index.html"><img class="panel__right__buttons__img" src="res/profile.png"></a></li></ul>
         </div>
         </div>
         <div class="description">
