feat: added adaptivity and contacts.html

--- a/contacts.html
+++ b/contacts.html
@@ -64,46 +64,34 @@
           </ul>
         </div>
       </div>
-      <div class="banner">
-        <img class="banner__image" src="res/banner.png">
-      </div>
-      <div class="description">
-        <article>
-          <h2>О нас</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, a?
-            Nihil voluptas ex in architecto ad! Quod nam neque explicabo
-            molestiae sit pariatur, ex unde temporibus, quam, hic asperiores
-            incidunt.
-          </p>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam
-            hic, aliquam cumque praesentium nisi temporibus sunt officiis at,
-            asperiores consectetur accusamus sit inventore corrupti sequi
-            dolores tempore molestiae a! Voluptas?
-          </p>
-        </article>
-      </div>
-      <div class="bestbooks">
-        <h2>Фентези подборка</h2>
-        <ul class="bestbooks__list">
-          <li><img src="res/img1.png" class="bestbooks__image" /></li>
-          <li><img src="res/img2.png" class="bestbooks__image" /></li>
-          <li><img src="res/img3.png" class="bestbooks__image" /></li>
-        </ul>
-      </div>
-      <div class="achievements">
-        <h2>Топ наших достижений</h2>
-        <ol>
-          <li><em>Низкие</em> цены</li>
-          <li><del>Большой</del> Гигантский ассортимент</li>
-          <li><strong>Отличное</strong> оформление сайта</li>
-        </ol>
-        <aside>Текст выше был сгенерирован</aside>
-      </div>
     </header>
-    <div class="rights">
-      <footer>Книжник - All rights reserved</footer>
+    <div class="table">
+      <table class="table__main">
+        <thead class="table__main__head">
+          <tr>
+            <th>Офис</th>
+            <th>Телефон</th>
+            <th>Почта</th>
+          </tr>
+        </thead>
+        <tbody class="table__main__body">
+          <tr>
+            <td>Офис 1</td>
+            <td>Телефон 1</td>
+            <td>Почта 1</td>
+          </tr>
+          <tr>
+            <td>Офис 2</td>
+            <td>Телефон 2</td>
+            <td>Почта 2</td>
+          </tr>
+          <tr>
+            <td>Офис 3</td>
+            <td>Телефон 3</td>
+            <td>Почта 3</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
