--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
             <nav>
               <ul class="panel__navigation__list">
                 <li>
-                  <a href="/catalog.html" class="panel__navigation__list__item"
+                  <a href="catalog.html" class="panel__navigation__list__item"
                     >Каталог</a
                   >
                 </li>
                 <li>
-                  <a href="/best.html" class="panel__navigation__list__item"
+                  <a href="best.html" class="panel__navigation__list__item"
                     >Лучшее</a
                   >
                 </li>
                 <li>
-                  <a href="/contacts.html" class="panel__navigation__list__item"
+                  <a href="contacts.html" class="panel__navigation__list__item"
                     >Контакты</a
                   >
                 </li>
