feat!: added lab-4

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
           </ul>
         </div>
       </div>
+    <script src="JS/panel/panel.js"></script>
+    </header>
+    <main>
       <div class="banner">
         <img class="banner__image" src="res/banner.png">
       </div>
@@ -101,9 +104,11 @@
         </ol>
         <aside>Текст выше был сгенерирован</aside>
       </div>
-    </header>
-    <div class="rights">
-      <footer>Книжник - All rights reserved</footer>
-    </div>
+    </main>
+      <footer class="rights">Книжник - All rights reserved 
+      <div id="loadTime"></div>
+      <script src="JS/script.js"></script>
+      </footer>
+    
   </body>
 </html>
