feat!: added lab-6

--- a/best.html
+++ b/best.html
@@ -66,3 +66,16 @@
       </div>
       <script src="JS/panel/panel.js"></script>
     </header>
+    <main>
+      <div class="catalog">
+      <h1>Избранные книги</h1>
+      <ul class="catalog__list">
+      <li class="catalog__list__item">
+        
+      <img src="res/img1.png" class="catalog__list__image" />
+      <a href="pages/books/1.html" class="catalog__list__link"><span class="catalog__list__name">Ведьмак</span></a>
+      </li>
+    </ul>
+    </div>
+    </main>
+  </body>
